--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "happy-dom": "^6.0.4",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
