--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "happy-dom": "^6.0.4",
+    "prettier": "^2.7.1",
     "typescript": "*",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
