--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.20.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@supabase/supabase-js": "2.0.0-rc.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
