--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-is": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
