--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@rive-app/react-canvas": "^3.0.38",
     "@supabase/supabase-js": "2.0.0-rc.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
