--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,9 @@
     ],
     "action": {
         "default_popup": "index.html"
+    },
+    "content_security_policy": {
+        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';",
+        "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'wasm-eval' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
     }
 }
