--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Niftytab",
-    "description": "Awesome extension to save your tabs, groups and sessions, improving performance in the browser compatible with many browsers.",
+    "description": "Awesome extension to save your tabs ungrouped or grouped in sessions, improving performance in the browser",
     "version": "1.0",
     "manifest_version": 3,
     "background": {
