--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,12 +6,32 @@
     "background": {
         "service_worker": "./workers/background.js"
     },
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+    },
     "permissions": [
         "storage",
         "activeTab",
         "tabs",
         "sessions",
-        "tabGroups"
+        "tabGroups",
+        "favicon"
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "images/*"
+            ],
+            "matches": [
+                "<all_urls>"
+            ],
+            "extension_ids": [
+                "*"
+            ]
+        }
     ],
     "action": {
         "default_popup": "index.html"
