BUG FIXED when users has tabs that cannot get favicon url was controlled

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,11 +14,8 @@
     },
     "permissions": [
         "storage",
-        "activeTab",
         "tabs",
-        "sessions",
-        "tabGroups",
-        "favicon"
+        "sessions"
     ],
     "web_accessible_resources": [
         {
