--- a/package.json
+++ b/package.json
@@ -11,31 +11,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/core": "^7.20.2",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.14",
-    "@mui/material": "^5.10.14",
-    "@rive-app/react-canvas": "^3.0.38",
-    "@supabase/supabase-js": "2.0.0-rc.12",
+    "@supabase/supabase-js": "2.39.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
-    "react-icons": "^4.6.0",
-    "react-is": "^18.2.0",
-    "react-router-dom": "^6.6.2",
-    "styled-components": "^5.3.6"
+    "react-hook-form": "^7.51.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/chrome": "^0.0.197",
-    "@types/node": "^18.7.23",
-    "@types/react": "^18.0.17",
+    "@testing-library/react": "^14.2.1",
+    "@types/chrome": "^0.0.263",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -45,9 +35,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "happy-dom": "^6.0.4",
     "prettier": "^2.7.1",
-    "typescript": "*",
-    "vite": "^3.1.0",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.23.4"
+    "vitest": "^1.3.1"
   }
 }
